# twoliter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  Makefile  README.md  clarify.toml  deny.toml  rust-toolchain.toml
.github/actions/install-crane/: action.yaml
.github/workflows/: release.yml  rust.yml
docs/design/: README.md
docs/design/diagrams/: build-sequence.plantuml
local/: README.md  alpha-sdk.Dockerfile  alpha-sdk.Dockerfile.dockerignore  alpha-sdk.dockerfile  alpha-sdk.sh
src/: common.rs  main.rs
src/cmd/: args.rs  mod.rs
src/docker/: docker_build.rs  image.rs  mod.rs  twoliter.rs
src/test/: mod.rs
src/test/data/: Twoliter-1.toml  Twoliter-invalid-version.toml
tests/integration-tests/: Cargo.toml
tests/integration-tests/src/: lib.rs  twoliter_update.rs
tests/projects/external-kit/: .gitignore  Cargo.toml  Infra.toml  README.md  Twoliter.toml  kit-amd64.tar  kit-metadata.json
tests/projects/external-kit/kits/: build.rs
tests/projects/external-kit/kits/extra-1-kit/: Cargo.toml
tests/projects/external-kit/variants/hello-ootb/: Cargo.toml
tests/projects/local-kit/: .gitignore  Cargo.toml  README.md  Twoliter.override  Twoliter.toml
tests/projects/local-kit/kits/: Cargo.toml
tests/projects/local-kit/kits/core-kit/: Cargo.toml
tests/projects/local-kit/kits/extra-1-kit/: Cargo.toml
tests/projects/local-kit/kits/extra-2-kit/: Cargo.toml
tests/projects/local-kit/kits/extra-3-kit/: Cargo.toml
tests/projects/local-kit/kits/hello-kit/: Cargo.toml
tests/projects/local-kit/sbkeys/: generate-local-sbkeys
tests/projects/local-kit/sources/: Cargo.toml  deny.toml
tests/projects/local-kit/sources/hello-agent/: Cargo.toml
tests/projects/local-kit/sources/hello-agent/src/: main.rs
tests/projects/local-kit/sources/hello-go/: go.mod
tests/projects/local-kit/sources/models/src/variant/: .keep
tests/projects/local-kit/variants/hello-ootb/: Cargo.toml
tests/projects/project1/: .dockerignore  .gitignore  Cargo.toml  Infra.toml  Twoliter.toml
tests/projects/project1/sources/hello-go/cmd/hello-go/: main.go
tests/projects/project1/variants/: Cargo.toml
tests/projects/project1/variants/aws-test-1/: Cargo.toml
tests/projects/project1/variants/hello-ootb/: Cargo.toml
tools/: Cargo.toml  build-cache-fetch
tools/attribution/: Dockerfile.attribution  attribution.sh
tools/bottlerocket-variant/: Cargo.toml
tools/buildsys/: Cargo.toml
tools/buildsys-config/: Cargo.toml
tools/buildsys-config/src/: lib.rs
tools/buildsys/src/: args.rs  builder.rs  cache.rs  constants.rs  gomod.rs  lib.rs  main.rs  manifest.rs  project.rs
tools/buildsys/src/builder/: error.rs
tools/buildsys/src/cache/: error.rs
tools/buildsys/src/gomod/: error.rs
tools/buildsys/src/manifest/: error.rs
tools/infrasys/test_tomls/: toml_yaml_conversion.yml
tools/krane/: Cargo.toml  README.md  build.rs
tools/krane/hashes/: crane
tools/krane/src/: lib.rs
tools/oci-cli-wrapper/: Cargo.toml
tools/oci-cli-wrapper/src/: cli.rs  crane.rs  docker.rs  lib.rs
tools/parse-datetime/: Cargo.toml
tools/parse-datetime/src/: lib.rs
tools/pipesys/: Cargo.toml
tools/pipesys/src/: lib.rs  main.rs  non_linux_server.rs  server.rs
tools/pipesys/src/cmd/: link.rs  mod.rs  non_linux_link.rs
tools/pubsys/: Cargo.toml  Infra.toml.example
tools/pubsys-config/: Cargo.toml
tools/pubsys-config/src/: lib.rs
tools/pubsys-setup/: Cargo.toml
tools/pubsys-setup/src/: main.rs
tools/pubsys/src/: main.rs  repo.rs
tools/pubsys/src/aws/: client.rs
tools/pubsys/src/aws/ami/: launch_permissions.rs  mod.rs  public.rs  register.rs
tools/pubsys/src/aws/promote_ssm/: mod.rs
tools/pubsys/src/aws/publish_ami/: mod.rs
tools/pubsys/src/aws/ssm/: mod.rs  ssm.rs  template.rs
tools/pubsys/src/aws/validate_ami/: ami.rs  mod.rs  results.rs
tools/pubsys/src/aws/validate_ssm/: mod.rs
tools/pubsys/src/kit/: mod.rs
tools/pubsys/src/kit/publish_kit/: mod.rs
tools/pubsys/src/repo/check_expirations/: mod.rs
tools/pubsys/src/repo/fetch_variant/: mod.rs
tools/pubsys/src/repo/refresh_repo/: mod.rs
tools/pubsys/src/repo/validate_repo/: mod.rs
tools/pubsys/src/vmware/: govc.rs
tools/pubsys/src/vmware/upload_ova/: mod.rs
tools/testsys/: Cargo.toml
tools/testsys-config/: Cargo.toml
tools/testsys-config/src/: lib.rs
tools/testsys/src/: aws_k8s.rs  aws_resources.rs  base64.rs  crds.rs  error.rs  install.rs  logs.rs  main.rs  metal_k8s.rs  run.rs  sonobuoy.rs
tools/unplug/: Cargo.toml
tools/unplug/src/: main.rs
tools/update-metadata/: Cargo.toml
tools/update-metadata/src/: lib.rs
twoliter/: Cargo.toml  build.rs
twoliter/embedded/: Dockerfile  Dockerfile.dockerignore  Makefile.toml  build.Dockerfile  build.Dockerfile.dockerignore  docker-go  img2img  imghelper  metadata.spec  ocihelper  partyplanner  repack.Dockerfile  repack.Dockerfile.dockerignore  rpm2img  rpm2kit
twoliter/src/: cargo_make.rs  common.rs  compatibility.rs  lock.rs  main.rs  project.rs  schema_version.rs  tools.rs
twoliter/src/cmd/: build.rs  build_clean.rs  debug.rs  fetch.rs  make.rs  mod.rs  publish.rs  publish_kit.rs  update.rs
twoliter/src/docker/: Twoliter.dockerfile  commands.rs  container.rs  image.rs  mod.rs  twoliter.rs
twoliter/src/lock/: archive.rs  image.rs  mod.rs  verification.rs  views.rs
twoliter/src/project/: mod.rs  vendor.rs
twoliter/src/project/lock/: image.rs  mod.rs  verification.rs
twoliter/src/test/: build_kit.rs  cargo_make.rs  mod.rs
twoliter/src/test/data/: Makefile.toml  Twoliter-1.toml  Twoliter-invalid-version.toml
twoliter/src/test/data/override/: Twoliter.override
