[workspace]
resolver = "2"

members = [
    "tools/bottlerocket-variant",
    "tools/buildsys",
    "tools/parse-datetime",
    "tools/pubsys",
    "tools/pubsys-config",
    "tools/pubsys-setup",
    "tools/testsys",
    "tools/testsys-config",
    "tools/update-metadata",
    "twoliter",
]

[profile.release]
strip = "debuginfo"
codegen-units = 1
lto = true

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.1.0"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-musl", "aarch64-unknown-linux-musl"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
