[package]
name = "twoliter"
version = "0.1.0-rc1"
edition = "2021"
description = "A command line tool for creating custom builds of Bottlerocket"
authors = ["Matthew James Briggs <brigmatt@amazon.com>"]
repository = "https://github.com/bottlerocket-os/twoliter"
license = "MIT OR Apache-2.0"
keywords = ["twoliter", "bottlerocket"]
exclude = ["/design", "/target", "/dockerfiles", "/scripts"]

[dependencies]
anyhow = "1"
async-recursion = "1"
async-walkdir = "1"
clap = { version = "4", features = ["derive", "env", "std"] }
env_logger = "0.11"
filetime = "0.2"
flate2 = "1"
futures= "0.3"
hex = "0.4"
log = "0.4"
non-empty-string = { version = "0.2", features = [ "serde" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
tempfile = "3"
tokio = { version = "1", default-features = false, features = ["fs", "macros", "process", "rt-multi-thread"] }
toml = "0.8"
uuid = { version = "1", features = [ "v4" ] }

# Binary dependencies. These are binaries that we want to embed in the Twoliter binary.
buildsys = { version = "0.1.0", artifact = [ "bin:buildsys", "bin:bottlerocket-variant" ], path = "../tools/buildsys" }
pubsys = { version = "0.1.0", artifact = [ "bin:pubsys" ], path = "../tools/pubsys" }
pubsys-setup = { version = "0.1.0", artifact = [ "bin:pubsys-setup" ], path = "../tools/pubsys-setup" }
testsys = { version = "0.1.0", artifact = [ "bin:testsys" ], path = "../tools/testsys" }
tuftool = { version = "0.10", artifact = [ "bin:tuftool" ] }

[build-dependencies]
bytes = "1"
flate2 = "1"
tar = "0.4"
