[package]
name = "twoliter"
version = "0.4.7"
edition = "2021"
description = "A command line tool for creating custom builds of Bottlerocket"
authors = ["Matthew James Briggs <brigmatt@amazon.com>"]
repository = "https://github.com/bottlerocket-os/twoliter"
license = "MIT OR Apache-2.0"
keywords = ["twoliter", "bottlerocket"]
exclude = ["/design", "/target", "/dockerfiles", "/scripts"]

[dependencies]
anyhow.workspace = true
async-recursion.workspace = true
async-walkdir.workspace = true
async-trait.workspace = true
base64.workspace = true
buildsys-config.workspace = true
clap = { workspace = true, features = ["derive", "env", "std"] }
env_logger.workspace = true
filetime.workspace = true
flate2.workspace = true
futures.workspace = true
log.workspace = true
oci-cli-wrapper.workspace = true
olpc-cjson.workspace = true
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
strum = { workspace = true, features = ["derive"] }
tar.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["fs", "macros", "process", "rt-multi-thread"] }
toml.workspace = true
tracing = { workspace = true, features = ["log"] }
uuid = { workspace = true, features = ["v4"] }

# Binary dependencies. These are binaries that we want to embed in the Twoliter binary
buildsys = { workspace = true }
pipesys = { workspace = true }
pubsys = { workspace = true }
pubsys-setup = { workspace = true }
testsys = { workspace = true }
tuftool = { workspace = true }
unplug = { workspace = true }

[build-dependencies]
bytes.workspace = true
flate2.workspace = true
tar.workspace = true

[features]
default = ["integ-tests"]
integ-tests = []
