[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dev-dependencies]
libc.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["fs", "process", "rt-multi-thread"] }
toml.workspace = true
twoliter = { workspace = true }
