[package]
name = "buildsys"
version = "0.1.0"
authors = ["Ben Cressey <bcressey@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[dependencies]
bottlerocket-variant = { version = "0.1", path = "../bottlerocket-variant" }
buildsys-config = { version = "0.1", path = "../buildsys-config" }
clap = { version = "4", features = ["derive", "env"] }
duct = "0.13"
guppy = "0.17"
hex = "0.4"
lazy_static = "1"
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
regex = "1"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "blocking"] }
semver = { version = "1", features = ["serde"]}
serde = { version = "1", features = ["derive"] }
serde_plain = "1"
serde_json = "1"
sha2 = "0.10"
snafu = "0.8"
toml = "0.8"
url = { version = "2", features = ["serde"] }
walkdir = "2"
nonzero_ext = "0.3"

[dev-dependencies]
tempfile = "3"
