[package]
name = "buildsys"
version = "0.1.0"
authors = ["Ben Cressey <bcressey@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[dependencies]
bottlerocket-variant.workspace = true
buildsys-config.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
duct.workspace = true
filetime.workspace = true
guppy.workspace = true
hex.workspace = true
lazy_static.workspace = true
pipesys.workspace = true
rand = { workspace = true, features = ["std", "std_rng"] }
regex.workspace = true
reqwest = { workspace = true, features = ["blocking", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_plain.workspace = true
serde_json.workspace = true
sha2.workspace = true
snafu.workspace = true
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread"] }
toml.workspace = true
url = { workspace = true, features = ["serde"] }
walkdir.workspace = true
nonzero_ext.workspace = true

[dev-dependencies]
tempfile.workspace = true
