[package]
name = "oci-cli-wrapper"
version = "0.1.0"
authors = ["Jarrett Tierney <jmt@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false

[dependencies]
async-trait = "0.1"
log = "0.4"
olpc-cjson = "0.1"
regex = "1"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
snafu = "0.8"
tar = "0.4"
tempfile = "3"
tokio = { version = "1.32", features = ["process"] }
which = "6"
