[package]
name = "oci-cli-wrapper"
version = "0.1.0"
authors = ["Jarrett Tierney <jmt@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false

[dependencies]
async-trait.workspace = true
krane-bundle.workspace = true
log.workspace = true
olpc-cjson.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
snafu.workspace = true
tar.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["process"] }
which.workspace = true
