[package]
name = "pipesys"
version = "0.1.0"
authors = ["Ben Cressey <bcressey@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.75"
clap = { version = "4", features = ["derive"] }
daemonize = "0.5.0"
env_logger = "0.11.3"
futures = "0.3.28"
log = "0.4.20"
nix = { version = "0.28.0", features = ["fs"] }
regex = { version = "1.9.5", features = ["std"], default-features = false }
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }

[target.'cfg(target_os = "linux")'.dependencies]
inotify = "0.10.2"
uds = { version = "0.4.1", features = ["tokio"] }
