[package]
name = "pipesys"
version = "0.1.0"
authors = ["Ben Cressey <bcressey@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
daemonize.workspace = true
env_logger.workspace = true
futures.workspace = true
log.workspace = true
nix = { workspace = true, features = ["fs"] }
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread"] }

[target.'cfg(target_os = "linux")'.dependencies]
inotify = "0.10.2"
uds = { version = "0.4.1", features = ["tokio"] }
