[package]
name = "pubsys-config"
version = "0.1.0"
authors = ["Zac Mrowicki <mrowicki@amazon.com>", "Tom Kirchner <tjk@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false

[dependencies]
chrono = { workspace = true, features = ["clock", "std"] }
home.workspace = true
lazy_static.workspace = true
log.workspace = true
parse-datetime.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_yaml.workspace = true
snafu.workspace = true
toml.workspace = true
url = { workspace = true, features = ["serde"] }
