[package]
name = "pubsys-setup"
version = "0.1.0"
authors = ["Zac Mrowicki <mrowicki@amazon.com>", "Tom Kirchner <tjk@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false

[dependencies]
clap = { workspace = true, features = ["derive"] }
hex.workspace = true
log.workspace = true
pubsys-config.workspace = true
reqwest = { workspace = true, features = ["blocking", "rustls-tls"] }
sha2.workspace = true
shell-words.workspace = true
simplelog.workspace = true
snafu.workspace = true
tempfile.workspace = true
url = { workspace = true, features = ["serde"] }
