[package]
name = "pubsys"
version = "0.1.0"
authors = ["Zac Mrowicki <mrowicki@amazon.com>", "Tom Kirchner <tjk@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false

[dependencies]
async-stream.workspace = true
aws-config.workspace = true
aws-credential-types.workspace = true
aws-sdk-ebs.workspace = true
aws-sdk-ec2.workspace = true
aws-sdk-kms.workspace = true
aws-sdk-ssm.workspace = true
aws-sdk-sts.workspace = true
aws-smithy-types.workspace = true
aws-types.workspace = true
buildsys.workspace = true
bytes.workspace = true
chrono = { workspace = true, features = ["clock", "std"] }
clap = { workspace = true, features = ["derive"] }
coldsnap = { workspace = true, features = ["aws-sdk-rust-rustls"] }
duct.workspace = true
futures.workspace = true
governor.workspace = true
indicatif.workspace = true
lazy_static.workspace = true
log.workspace = true
nonzero_ext.workspace = true
num_cpus.workspace = true
oci-cli-wrapper.workspace = true
parse-datetime.workspace = true
pubsys-config.workspace = true
semver.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_plain.workspace = true
simplelog.workspace = true
snafu.workspace = true
tabled.workspace = true
tempfile.workspace = true
tinytemplate.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["time"] }
toml.workspace = true
tough = { workspace = true, features = ["http"] }
tough-kms.workspace = true
tough-ssm.workspace = true
update-metadata.workspace = true
url = { workspace = true, features = ["serde"] }
