[package]
name = "testsys-config"
version = "0.1.0"
authors = ["Ethan Pullen <pullenep@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false

[dependencies]
bottlerocket-types.workspace = true
bottlerocket-variant.workspace = true
handlebars.workspace = true
log.workspace = true
maplit.workspace = true
testsys-model.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_plain.workspace = true
serde_yaml.workspace = true
snafu.workspace = true
toml.workspace = true
