[package]
name = "testsys"
version = "0.1.0"
authors = [
    "Ethan Pullen <pullenep@amazon.com>",
    "Matt Briggs <brigmatt@amazon.com>",
]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false

[dependencies]
async-trait.workspace = true
aws-config.workspace = true
aws-sdk-ec2.workspace = true
base64.workspace = true
bottlerocket-types.workspace = true
bottlerocket-variant.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
env_logger.workspace = true
futures.workspace = true
handlebars.workspace = true
log.workspace = true
maplit.workspace = true
testsys-model.workspace = true
pubsys-config.workspace = true
fastrand.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_plain.workspace = true
serde_yaml.workspace = true
snafu.workspace = true
term_size.workspace = true
testsys-config.workspace = true
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread"] }
unescape.workspace = true
url.workspace = true
