[package]
name = "update-metadata"
version = "0.1.0"
authors = ["Samuel Mendoza-Jonas <samjonas@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[dependencies]
chrono = { workspace = true, features = ["clock", "serde", "std"] }
parse-datetime.workspace = true
regex.workspace = true
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_plain.workspace = true
snafu.workspace = true
toml.workspace = true

