[workspace]
resolver = "2"
members = [
    "kits/core-kit",
    "kits/extra-1-kit",
    "kits/extra-2-kit",
    "kits/extra-3-kit",
    "packages/pkg-a-1.27",
    "packages/pkg-b",
    "packages/pkg-c",
    "packages/pkg-d",
    "packages/pkg-e",
    "packages/pkg-f",
    "packages/pkg-g",
    "variants/hello-ootb",
]

[profile.dev]
debug = false
opt-level = 'z'

[profile.dev.build-override]
opt-level = 'z'
