[package]
name = "core-kit"
version = "0.1.0"
edition = "2021"
publish = false
build = "../build.rs"
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[package.metadata.build-kit]
included-packages = [
    "pkg-a",
]

[lib]
path = "../kit.rs"

[build-dependencies]
pkg-a = { path = "../../packages/pkg-a" }
