[package]
name = "extra-3-kit"
version = "0.1.0"
edition = "2021"
publish = false
build = "../build.rs"
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[package.metadata.build-kit]
vendor = "bottlerocket"
included-packages = [
    "pkg-e"
]

[lib]
path = "../kit.rs"

[build-dependencies]
pkg-e = { path = "../../packages/pkg-e" }
# pkg-f will also be included in the kit because pkg-g requires pkg-f
pkg-g = { path = "../../packages/pkg-g" }
extra-1-kit = { path = "../../kits/extra-1-kit" }
extra-2-kit = { path = "../../kits/extra-2-kit" }
